# PTLdap

./: .gitmodules  CMakeLists.txt  README.md
examples/: CMakeLists.txt  base_client.hpp  ldap_search.cpp
test/: ber.cpp  ldap.cpp  tools.hpp
tests/: CMakeLists.txt
